alpha-rarefaction visualizations
one for denovo, one for fragment insertion tree.

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "778b1329-4862-4b15-a1e3-7d32c814a170",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,9 @@
    "metadata": {},
    "source": [
     "Artifacts used for alpha-diversity (start)\n",
-    "- dada2_table_align_filtered.qza"
+    "- dada2_table_align_filtered.qza\n",
+    "- fasttree-tree-rooted.qza\n",
+    "- sepp-tree.qza"
    ]
   },
   {
@@ -186,22 +188,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a501688e-0dca-47c2-9e8e-5f3b7d8e12d7",
-   "metadata": {},
+   "execution_count": 14,
+   "id": "b0e22a2e-a021-4e8f-a690-3d74963e8e2e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31m\u001b[1mThere was an issue with loading the file CE/food-metadata.tsv as metadata:\n",
-      "\n",
-      "  Metadata file path doesn't exist, or the path points to something other than a file. Please check that the path exists, has read permissions, and points to a regular file (not a directory): CE/food-metadata.tsv\n",
-      "\n",
-      "  There may be more errors present in the metadata file. To get a full report, sample/feature metadata files can be validated with Keemei: https://keemei.qiime2.org\n",
-      "\n",
-      "  Find details on QIIME 2 metadata requirements here: https://docs.qiime2.org/2022.2/tutorials/metadata/\u001b[0m\n",
-      "\n",
+      "2022-11-06 10:26:22 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/food-metadata.tsv\" [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "! wget -nv -O $data_dir/food-metadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6bd5725e-1c42-41a1-9d9a-b1d65c17a733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a501688e-0dca-47c2-9e8e-5f3b7d8e12d7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_denovo.qzv\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -210,34 +237,152 @@
     "! qiime diversity alpha-rarefaction \\\n",
     "    --i-table $data_dir/dada2_table_align_filtered.qza \\\n",
     "    --i-phylogeny $data_dir/fasttree-tree-rooted.qza \\\n",
-    "    --p-max-depth 10000 \\\n",
+    "    --p-max-depth 100000 \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv\\\n",
-    "    --o-visualization $data_dir/alpha-rarefaction.qzv"
+    "    --o-visualization $data_dir/alpha-rarefaction_denovo.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "86be5dd6-363a-47aa-90fb-b0de47a11a98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-6ftupw_0')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: d3bffc94-08d3-4c2b-a593-28947694ee89>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#denovo tree: number of samples has plateau at around 7000\n",
+    "#could change --p-max-depth 7000 \\\n",
+    "Visualization.load(f'{data_dir}/alpha-rarefaction_denovo.qzv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1400562b-0625-494b-a7b8-ad4a2449b2e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_fragm_insert.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity alpha-rarefaction \\\n",
+    "    --i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "    --i-phylogeny $data_dir/sepp-tree.qza \\\n",
+    "    --p-max-depth 100000 \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv\\\n",
+    "    --o-visualization $data_dir/alpha-rarefaction_fragm_insert.qzv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e91f91a8-7208-4145-8648-5f77e637aeaf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-g16yskky')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 52388c9d-9369-407c-8d51-38755854f59b>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fragment insertion tree: number of samples has plateau at around \n",
+    "#could change --p-max-depth  \\\n",
+    "Visualization.load(f'{data_dir}/alpha-rarefaction_fragm_insert.qzv')"
+   ]
   },
   {
    "cell_type": "code",
