diversity core-metrics-phylogenetic
sampling depth of 1500
code:
 --i-table $data_dir/dada2_table_align_filtered.qza \
  --i-phylogeny $data_dir/sepp-tree.qza \
  --m-metadata-file $data_dir/food-metadata.tsv \
  --p-sampling-depth 1500 \
  --output-dir $data_dir/core-metrics-results_insertion_1500

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -183,7 +183,13 @@
    "id": "b2f93508-2e0b-4fca-b8d7-967e4b846439",
    "metadata": {},
    "source": [
-    "Using alpha-rarefaction we can decide which rarefying threshold is bes suited for our data."
+    "Using alpha-rarefaction we can decide which rarefying threshold is best suited for our data.\n",
+    "1. downloaded metadata (somehow wasn't in my CE). if you already have it run normally, if not, remove the hashtags # in the following two cells.\n",
+    "2. visualized diversity alpha-rarefaction (--p-max-depth 10000) to find out which sequencing depth to use -> 1500. Also no difference was noticed between de novo and fragment insertion tree. at the end we used the insertion tree.\n",
+    "3. use core-metrics-phylogenetic plugin\n",
+    "4. use diversity alpha-group-significance to run some statisical tests\n",
+    "5. use diversity alpha-correlation to check for correlations (columns - richness of microbial community)\n",
+    "6. some fun with pandas. nice poxplots"
    ]
   },
   {
@@ -203,7 +209,7 @@
     }
    ],
    "source": [
-    "! wget -nv -O $data_dir/food-metadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
+    "#! wget -nv -O $data_dir/food-metadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
    ]
   },
   {
@@ -213,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
+    "#df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
    ]
   },
   {
@@ -299,14 +305,14 @@
     }
    ],
    "source": [
-    "#denovo tree: number of samples has plateau at around 7000\n",
+    "#denovo tree: number of samples has plateau at around 7000 for rind-type\n",
     "#could change --p-max-depth 7000 \\\n",
     "Visualization.load(f'{data_dir}/alpha-rarefaction_denovo.qzv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "1400562b-0625-494b-a7b8-ad4a2449b2e7",
    "metadata": {},
    "outputs": [
@@ -314,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_fragm_insert.qzv\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_insertion.qzv\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -325,12 +331,12 @@
     "    --i-phylogeny $data_dir/sepp-tree.qza \\\n",
     "    --p-max-depth 100000 \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv\\\n",
-    "    --o-visualization $data_dir/alpha-rarefaction_fragm_insert.qzv"
+    "    --o-visualization $data_dir/alpha-rarefaction_insertion.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "e91f91a8-7208-4145-8648-5f77e637aeaf",
    "metadata": {},
    "outputs": [
@@ -367,27 +373,94 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-g16yskky')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-p_r9mond')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 52388c9d-9369-407c-8d51-38755854f59b>"
+       "<visualization: Visualization uuid: 451f3775-a4b4-4ef5-85a2-fc702c1dceea>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#fragment insertion tree: number of samples has plateau at around \n",
-    "#could change --p-max-depth  \\\n",
-    "Visualization.load(f'{data_dir}/alpha-rarefaction_fragm_insert.qzv')"
+    "#fragment insertion tree: number of samples has plateau at around 7000 for rind-type\n",
+    "#could change --p-max-depth  7000\\\n",
+    "Visualization.load(f'{data_dir}/alpha-rarefaction_insertion.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b729072-a286-4522-9f30-6eaee03bfcb6",
+   "metadata": {},
+   "source": [
+    "Observation: no difference was found for denovo vs fragment insertion tree.\n",
+    "I would cut at 1500 and choose that as sequencing depth. The plateau is already reched for almost all fators then and the number of samples starts decreasing. With 1500 we don't loose too much. It could even be set lower, at around 1250.\n",
+    "\n",
+    "at 1500: X samples are left (loose X samples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f94c1b6e-5328-474e-aa73-45cf509a4248",
+   "metadata": {},
+   "source": [
+    "Sequencing depth of 1500 for rarefaction: now let's have a look at the whitin-sample diversity (= alpha div.) Done for fragment-insertion tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3b8fcd33-800c-4b0c-91cf-65cd5dc2135f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/core-metrics-results_insertion_1500/rarefied_table.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[AlphaDiversity] to: CE/core-metrics-results_insertion_1500/faith_pd_vector.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[AlphaDiversity] to: CE/core-metrics-results_insertion_1500/observed_features_vector.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[AlphaDiversity] to: CE/core-metrics-results_insertion_1500/shannon_vector.qza\u001b[0m\n",
+      "\u001b[32mSaved SampleData[AlphaDiversity] to: CE/core-metrics-results_insertion_1500/evenness_vector.qza\u001b[0m\n",
+      "\u001b[32mSaved DistanceMatrix to: CE/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza\u001b[0m\n",
+      "\u001b[32mSaved DistanceMatrix to: CE/core-metrics-results_insertion_1500/weighted_unifrac_distance_matrix.qza\u001b[0m\n",
+      "\u001b[32mSaved DistanceMatrix to: CE/core-metrics-results_insertion_1500/jaccard_distance_matrix.qza\u001b[0m\n",
+      "\u001b[32mSaved DistanceMatrix to: CE/core-metrics-results_insertion_1500/bray_curtis_distance_matrix.qza\u001b[0m\n",
+      "\u001b[32mSaved PCoAResults to: CE/core-metrics-results_insertion_1500/unweighted_unifrac_pcoa_results.qza\u001b[0m\n",
+      "\u001b[32mSaved PCoAResults to: CE/core-metrics-results_insertion_1500/weighted_unifrac_pcoa_results.qza\u001b[0m\n",
+      "\u001b[32mSaved PCoAResults to: CE/core-metrics-results_insertion_1500/jaccard_pcoa_results.qza\u001b[0m\n",
+      "\u001b[32mSaved PCoAResults to: CE/core-metrics-results_insertion_1500/bray_curtis_pcoa_results.qza\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/unweighted_unifrac_emperor.qzv\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/weighted_unifrac_emperor.qzv\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/jaccard_emperor.qzv\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/bray_curtis_emperor.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity core-metrics-phylogenetic \\\n",
+    "  --i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "  --i-phylogeny $data_dir/sepp-tree.qza \\\n",
+    "  --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "  --p-sampling-depth 1500 \\\n",
+    "  --output-dir $data_dir/core-metrics-results_insertion_1500"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e9a1b7-b170-4008-858c-ad37510f2953",
+   "id": "1b467107-6495-4835-b80f-854f35feccbe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573b24fb-18d3-4383-acfe-8a2fe5c4138c",
    "metadata": {},
    "outputs": [],
    "source": []
