--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -894,6 +894,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbd72785-505c-4417-98e3-d6031278bff1",
+   "metadata": {},
+   "source": [
+    "Plot doesn't look similar to the one in the exercise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "06bf761e-40c1-46a4-b796-0472ccc10f76",
@@ -952,89 +960,276 @@
    "id": "be06040d-c059-47fd-851b-ef17a22d9707",
    "metadata": {},
    "source": [
-    "Measure beta diversity in q2-diversity with the beta method. This method gives access to a wider selection of distance metrics than those used by core-metrics-phylogenetic."
+    "### PERMANOVA test\n",
+    "Statistical testing of associations between beta diversity and categorical variables.\n",
+    "We perform a PERMANOVA test checking whether the observed categories are significantly grouped in QIIME 2 with the qiime diversity beta-group-significance method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e96124f1-3828-40e4-a834-9ca9f0274ae5",
+   "metadata": {},
+   "source": [
+    "Inspect the beta diversity metrics of rindtype groupings:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa95f0a2-83e6-4f08-8740-5c0b4e939bf2",
+   "id": "49d3e7ad-0ec9-47c4-868c-98878dc16072",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usage: \u001b[94mqiime diversity beta-correlation\u001b[0m [OPTIONS]\n",
-      "\n",
-      "  Create a distance matrix from a numeric metadata column and apply a two-\n",
-      "  sided Mantel test to identify correlation between two distance matrices.\n",
-      "  Actions used internally: `distance-matrix` from q2-metadata and `mantel`\n",
-      "  from q2-diversity.\n",
-      "\n",
-      "\u001b[1mInputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--i-distance-matrix\u001b[0m ARTIFACT\n",
-      "    \u001b[32mDistanceMatrix\u001b[0m     Matrix of distances between pairs of samples.\n",
-      "                                                                    \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mParameters\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--m-metadata-file\u001b[0m METADATA\n",
-      "  \u001b[94m\u001b[4m--m-metadata-column\u001b[0m COLUMN  \u001b[32mMetadataColumn[Numeric]\u001b[0m\n",
-      "                       Numeric metadata column from which to compute pairwise\n",
-      "                       Euclidean distances                          \u001b[35m[required]\u001b[0m\n",
-      "  \u001b[94m--p-method\u001b[0m TEXT \u001b[32mChoices('spearman', 'pearson')\u001b[0m\n",
-      "                       The correlation test to be applied in the Mantel test.\n",
-      "                                                         \u001b[35m[default: 'spearman']\u001b[0m\n",
-      "  \u001b[94m--p-permutations\u001b[0m INTEGER\n",
-      "    \u001b[32mRange(0, None)\u001b[0m     The number of permutations to be run when computing\n",
-      "                       p-values. Supplying a value of zero will disable\n",
-      "                       permutation testing and p-values will not be calculated\n",
-      "                       (this results in *much* quicker execution time if\n",
-      "                       p-values are not desired).               \u001b[35m[default: 999]\u001b[0m\n",
-      "  \u001b[94m--p-intersect-ids\u001b[0m / \u001b[94m--p-no-intersect-ids\u001b[0m\n",
-      "                       If supplied, IDs that are not found in both distance\n",
-      "                       matrices will be discarded before applying the Mantel\n",
-      "                       test. Default behavior is to error on any mismatched\n",
-      "                       IDs.                                   \u001b[35m[default: False]\u001b[0m\n",
-      "  \u001b[94m--p-label1\u001b[0m TEXT      Label for `\u001b[4mdistance-matrix\u001b[0m` in the output\n",
-      "                       visualization.                    \u001b[35m[default: 'Metadata']\u001b[0m\n",
-      "  \u001b[94m--p-label2\u001b[0m TEXT      Label for `\u001b[4mmetadata-distance-matrix\u001b[0m` in the output\n",
-      "                       visualization.             \u001b[35m[default: 'Distance Matrix']\u001b[0m\n",
-      "\u001b[1mOutputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--o-metadata-distance-matrix\u001b[0m ARTIFACT\n",
-      "    \u001b[32mDistanceMatrix\u001b[0m     The Distance Matrix produced from the metadata column\n",
-      "                       and used in the mantel test                  \u001b[35m[required]\u001b[0m\n",
-      "  \u001b[94m\u001b[4m--o-mantel-scatter-visualization\u001b[0m VISUALIZATION\n",
-      "                       Scatter plot rendering of the manteltest results\n",
-      "                                                                    \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mMiscellaneous\u001b[0m:\n",
-      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
-      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
-      "                       execution of this action. Or silence output if\n",
-      "                       execution is successful (silence is golden).\n",
-      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
-      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
-      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n"
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/uw_unifrac-rindtype-significance.qzv\u001b[0m\n",
+      "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "! qiime diversity beta-correlation --help"
+    "! qiime diversity beta-group-significance \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column rindtype \\\n",
+    "    --p-pairwise \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/uw_unifrac-rindtype-significance.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "737fabca-a671-4185-b8d6-d8309dc8e46f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-w8kj7h4h')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 1e4ba342-3712-47cd-ab6b-beed1760bf45>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/uw_unifrac-rindtype-significance.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8394d8d7-42b5-460f-aaed-ae294a7f6e41",
+   "metadata": {},
+   "source": [
+    "Inspect the beta diversity metrics of continent groupings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d28194e6-74f3-492e-b15b-bb2f66788c30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/uw_unifrac-continent-significance.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity beta-group-significance \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column continent \\\n",
+    "    --p-pairwise \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/uw_unifrac-continent-significance.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79ecfd17-83bb-4745-95d9-c8e446c3f2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-8p3kendu')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 1d283af8-9f03-4510-8ff1-39b3cdb7ebfa>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/uw_unifrac-continent-significance.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd7e3325-4d48-4ff9-a978-581349d396c6",
+   "metadata": {},
+   "source": [
+    "Inspect the beta diversity metrics of animal source groupings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "19f1f7b1-ffaf-4201-bdde-5cbd3e3dd777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/uw_unifrac-animal-significance.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity beta-group-significance \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column animal_source \\\n",
+    "    --p-pairwise \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/uw_unifrac-animal-significance.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "603cb237-0530-4123-9506-a5dc4a93b6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ze8xn_sb')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 467e9257-7ad3-40d9-bc32-db073af12d87>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/uw_unifrac-animal-significance.qzv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d3a979-a181-4cae-9b35-2e66270d083e",
+   "id": "892bdc8a-0e82-4e71-b984-e263bee7c95d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "! qiime diversity beta-correlation\n",
-    "  --i-distance-matrix \n",
-    "  --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "  --m-metadata-column\n",
-    "  --o-metadata-distance-matrix $data_dir/beta-div-distance-matrix.qza \\\n",
-    "  --o-mantel-scatter-visualization $data_dir/beta-div-mantel-scatter-vis.qzv "
-   ]
+   "source": []
   }
  ],
  "metadata": {
