--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1224,9 +1224,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fdcc442d-8f80-4fa5-a86b-73f9a3bbcc03",
+   "metadata": {},
+   "source": [
+    "PERMANOVA test can also be performed with the adonis implementation. --> to explain which covariates explain the most variation in our dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892bdc8a-0e82-4e71-b984-e263bee7c95d",
+   "id": "220d7e91-ebf9-4070-9946-0e57f06f07bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! qiime diversity adonis \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --p-formula \"rindtype+continent+country+animal_source+pasteurized\" \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/adonis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a797368d-385b-4c06-bcf0-2cfad1f0f57a",
    "metadata": {},
    "outputs": [],
    "source": []
