--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -974,6 +974,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b38b678-b208-473d-ac1a-49c2d3eb1423",
+   "metadata": {},
+   "source": [
+    "Result: Distances between samples in groups are significantly different from the distance between samples from the other groups as the p-values are all 0.001."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "49d3e7ad-0ec9-47c4-868c-98878dc16072",
@@ -1057,6 +1065,14 @@
    "metadata": {},
    "source": [
     "Inspect the beta diversity metrics of continent groupings:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd951046-f931-4af2-ad8f-16bd270a4072",
+   "metadata": {},
+   "source": [
+    "Result: "
    ]
   },
   {
@@ -1232,23 +1248,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c6918d8-8197-4262-bfd6-961ca79ccbea",
+   "metadata": {},
+   "source": [
+    "Order in formula can make a difference in the outcomes. --> try different orders"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "220d7e91-ebf9-4070-9946-0e57f06f07bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/adonis.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! qiime diversity adonis \\\n",
     "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "    --p-formula \"rindtype+continent+country+animal_source+pasteurized\" \\\n",
-    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/adonis"
+    "    --p-formula \"rindtype+continent+country+region+animal_source+pasteurized\" \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/adonis.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a797368d-385b-4c06-bcf0-2cfad1f0f57a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-mgpz4ef1')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: eb6b4a78-3b9f-4a21-a9ca-ee9fb333f9c6>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/adonis.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f58f849-13cf-4bd8-b9c8-4b6d44768896",
+   "metadata": {},
+   "source": [
+    "Different order in p-formula:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "26bec1c1-574e-4cc1-9b11-be0c4e725c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_1500/adonis_neworder.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity adonis \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --p-formula \"continent+country+region+animal_source+rindtype+pasteurized\" \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_1500/adonis_neworder.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "59c964f4-18cf-46ea-9966-38484eb2766b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-rlrxt3ip')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 85058335-46f8-4062-8d05-5a507ccbe954>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/adonis_neworder.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8efb094d-a0cf-4479-b57a-5de24632d295",
+   "metadata": {},
+   "source": [
+    "#### PANDAS fun"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a797368d-385b-4c06-bcf0-2cfad1f0f57a",
+   "id": "5bb807b8-a30d-415b-9da9-2f0b6b8c0e65",
    "metadata": {},
    "outputs": [],
    "source": []
