filtered feature table and sequences only to assigned phylum level

--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "1c0fde3e-0106-4164-a46f-dc99d671734d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "a2819261-1db0-4991-9658-e38b6a5381d5",
    "metadata": {},
    "outputs": [
@@ -171,13 +171,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-m1dz0_fo')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-dysuw_wa')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 3a4f25b7-cc5a-4609-8904-038a61336e53>"
+       "<visualization: Visualization uuid: 25326f1a-4573-4976-b1a6-a30b926b7b60>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,6 +505,139 @@
    ],
    "source": [
     "Visualization.load(f'{data_dir}/taxa-bar-plots_v4_filtered.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "094a768c-f42e-4dd6-87f7-316dfbca5d45",
+   "metadata": {},
+   "source": [
+    "BUT I AM NOT DONE YET WITH FILTERING: Filtering the feature table and the sequences only to **assigned phylum level** and exclude the **unassigned**: (because when exploring barplot we discovered some features which had k__Bacteria;__;__;__;__;__;__ or Unassigned;__;__;__;__;__;__. These 2 features give us no additional information if we keep it in our data?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e85d1694-4727-4938-ad06-5bcd7a29dcc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table_align_filtered2.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime taxa filter-table \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--p-include p__ \\\n",
+    "--o-filtered-table $data_dir/dada2_table_align_filtered2.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "379c6d29-35f3-4fb6-b8ff-2bdbc9822eea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set_filtered2.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter sequences and exclude mitochondria,chloroplast\n",
+    "! qiime taxa filter-seqs \\\n",
+    "--i-sequences $data_dir/dada2_rep_set.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--p-include p__ \\\n",
+    "--o-filtered-sequences $data_dir/dada2_rep_set_filtered2.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c92a9022-7dc9-4da2-b426-e4804416bcd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/taxa-bar-plots_v4_filtered2.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#this is the new barplot with the filtered Feature table and sequences ONLY TO PHYLUM LEVEL\n",
+    "! qiime taxa barplot \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered2.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--o-visualization $data_dir/taxa-bar-plots_v4_filtered2.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ddbf7a9-63c7-46e9-a721-869e54b83d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-3v8uoplf')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 3b7bc1f8-8aab-4103-80fa-3890afc57fce>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/taxa-bar-plots_v4_filtered2.qzv')"
    ]
   },
   {
