Added different metrics

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -832,6 +832,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5c80f59-0489-4525-ab29-f7c79399b160",
+   "metadata": {},
+   "source": [
+    "#### Unweighted UniFrac"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7c347aac-9c5c-4d04-85d8-0a7179a81f30",
@@ -887,18 +895,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098654db-883c-4b4f-b113-17e98cd8f7cf",
+   "id": "96d149c9-9637-4882-9b36-e775465ca674",
    "metadata": {},
    "source": [
-    "Insect the Bray-Curtis dissimilarity PCoA plot: "
+    "#### Jaccard"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "face3723-69b1-4164-8500-4366cbc490c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "cbd72785-505c-4417-98e3-d6031278bff1",
+   "id": "a8d73e98-2ea9-46c7-ad79-fc96c72e1c6d",
    "metadata": {},
    "source": [
-    "Plot doesn't look similar to the one in the exercise."
+    "#### Weighted UniFrac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1464b263-74aa-4163-930e-359d9802b6c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b5dfe9-1e1c-4934-aa35-617ced808cd6",
+   "metadata": {},
+   "source": [
+    "#### Bray-Curtis"
    ]
   },
   {
@@ -953,6 +985,22 @@
    ],
    "source": [
     "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/bray_curtis_emperor.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "098654db-883c-4b4f-b113-17e98cd8f7cf",
+   "metadata": {},
+   "source": [
+    "Insect the Bray-Curtis dissimilarity PCoA plot: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd72785-505c-4417-98e3-d6031278bff1",
+   "metadata": {},
+   "source": [
+    "Plot doesn't look similar to the one in the exercise."
    ]
   },
   {
@@ -1189,7 +1237,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "603cb237-0530-4123-9506-a5dc4a93b6a1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1237,6 +1287,14 @@
    ],
    "source": [
     "Visualization.load(f'{data_dir}/core-metrics-results_insertion_1500/uw_unifrac-animal-significance.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4b924b9-f97c-4cf4-b266-8d3ba4f6dda9",
+   "metadata": {},
+   "source": [
+    "#### ADONIS"
    ]
   },
   {
